# Gen-AI-Agentic-AI-Learning

./: .gitignore  pyproject.toml  requirements.txt
Traditional RAG/notebook/: document.ipynb  pdf_loader.ipynb
Vectorless RAG/: vectorless_rag.ipynb
langchain/: 1-langchain_intro.ipynb  2-tools.ipynb  3-agent_intro.ipynb  4-multiple_agent_tools.ipynb  5-messages.ipynb  6-structured_output.ipynb  7-memory.ipynb  8-middleware.ipynb
